fix:     letter-spacing

--- a/styles/sass/components/_block_2.scss
+++ b/styles/sass/components/_block_2.scss
@@ -15,7 +15,9 @@
     max-width: 1098px;
     width: 100%;
     margin: 0 auto;
+    padding-bottom: 180px;
     position: relative;
+
 }
 .section-product__subtitle {
     text-align: center;
@@ -89,7 +91,7 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 24px;
-    letter-spacing: 23%;
+    letter-spacing: 3px;
     text-transform: uppercase;
 }
 .product-card__info-name {
